--- a/src/styles.css
+++ b/src/styles.css
@@ -278,11 +278,16 @@ form .file-input {
     line-height: 1.2;
 }
 
+.avatar p{
+    font-size: 12px;
+}
+
 article .avatar img {
     max-width: 50px;
     height: 50px;
     object-fit: cover;
     border-radius: 50%;
+    margin-right: 8px;
 }
 
 
